# fin-pdf-extract

./: .gitignore  README.md  data_engineering.ipynb  data_synchrony_average_balance.ipynb  data_synchrony_important_kpi_years.ipynb  extract.py  extract_fin_tab_pdf.py  pyproject.toml  test_module.ipynb
data/: data_engineering.ipynb
data/json/: synchrony.json  synchrony_10K_2021.json
