[tool.poetry]
name = "fin-pdf-extract"
version = "0.1.0"
description = ""
authors = ["Ezra Tampubolon"]
readme = "README.md"
packages = [{include = "fin_pdf_extract"}]

[tool.poetry.dependencies]
python = "^3.8"
tabula-py = "^2.5.1"
ipykernel = "^6.16.0"
tabula = "^1.0.5"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
